<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/client_orders_add"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/clients_orders_menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/client_orders_change_data"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/clients_orders_menu_change_order_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/client_orders_discount"
        android:title="@string/alert_kasa_menu_sale"
        app:showAsAction="never" />



    <item
        android:id="@+id/client_orders_cancel"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/clients_orders_menu_cancel"
        app:showAsAction="never" />

    <item
        android:id="@+id/client_orders_save"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/clients_orders_menu_save"
        app:showAsAction="never" />
</menu>