<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/client_search"
        android:icon="@drawable/ic_search"
        android:title="@string/product_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/client_filter"
        android:title="@string/client_menu_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/client_balance_update"
        android:title="@string/client_menu_balance_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/client_add_client"
        android:title="@string/client_menu_add_client"
        app:showAsAction="never" />

</menu>